# Trackcpp

./: README.md
sprint00/t00/: CMakeLists.txt  helloTamriel.cpp
sprint00/t01/: printDialog.cpp  printDialog.h
sprint00/t02/: CMakeLists.txt  main.cpp  walletManager.cpp  walletManager.h
sprint00/t03/: castSpells.cpp  castSpells.h
sprint00/t04/: referenceOrPointer.cpp  referenceOrPointer.h
sprint00/t05/: CMakeLists.txt  main.cpp
sprint00/t06/: CMakeLists.txt  main.cpp  meadSond.cpp  meadSond.h
sprint00/t07/: CMakeLists.txt  main.cpp
sprint00/t07/src/: insert.cpp  inventory.h  other_func.cpp  remove.cpp
sprint01/t00/: CMakeLists.txt  main.cpp
sprint01/t01/: CMakeLists.txt  main.cpp
sprint01/t02/: CMakeLists.txt  main.cpp
sprint01/t02/src/: CMakeLists.txt  parser.cpp  searchRoad.cpp  split.cpp  visitAll.h
sprint01/t03/: CMakeLists.txt  main.cpp
sprint01/t03/src/: CMakeLists.txt  diedRabbit.cpp  randRabbit.cpp  setRabbit.cpp  vampireRabbits.h
sprint01/t04/: CMakeLists.txt  main.cpp
sprint01/t04/src/: CMakeLists.txt  split.cpp  stdAlgoV1.h  validator.cpp
sprint01/t05/: CMakeLists.txt  main.cpp
sprint01/t05/src/: CMakeLists.txt  machining.cpp  split.cpp  stdAlgoV2.h  streamToFile.cpp  validator.cpp
sprint02/t00/: CMakeLists.txt  main.cpp
sprint02/t00/src/: CMakeLists.txt  split.cpp  streamToFile.cpp  uWord.h  validator.cpp
sprint02/t01/: CMakeLists.txt  main.cpp
sprint02/t01/src/: CMakeLists.txt  cuWord.h  split.cpp  streamToFile.cpp  validator.cpp
sprint02/t02/: CMakeLists.txt  main.cpp
sprint02/t02/src/: CMakeLists.txt  addBook.cpp  bookS.h  deleteBook.cpp  listBook.cpp  readBook.cpp  split.cpp
sprint02/t03/: CMakeLists.txt  main.cpp
sprint02/t03/src/: CMakeLists.txt  printTesBooks.cpp  split.cpp  tesL.h  validator.cpp
sprint03/t00/: templateAddition.h
sprint03/t01/: outputAny.h
sprint03/t02/: sumOfArguments.h
sprint03/t03/: sumFileData.h
sprint03/t04/: outputContainer.h
sprint03/t05/: squareValue.h
sprint03/t06/: isPalindrome.h
sprint03/t07/: sortValues.h
sprint04/t00/: CMakeLists.txt  main.cpp
sprint04/t00/utils/: CMakeLists.txt
sprint04/t01/app/: main.cpp
sprint04/t01/app/src/: Axe.cpp  Axe.h  ImperialSoldier.cpp  ImperialSoldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Sword.h
sprint04/t02/app/: main.cpp
sprint04/t02/app/src/: dragonborn.cpp
sprint04/t03/app/: main.cpp
sprint04/t03/app/src/: dCalculator.cpp  dCalculator.h  getArg.cpp  printResult.cpp  quit.cpp
sprint05/t00/app/: main.cpp
sprint05/t00/app/src/: draugr.cpp  lib_draugr.h
sprint05/t01/app/: main.cpp
sprint05/t01/app/src/: draugr.cpp  lib_draugr.h
sprint05/t02/app/: CMakeLists.txt  main.cpp
sprint05/t02/app/src/: draugr.cpp  lib_draugr.h
sprint05/t03/app/: CMakeLists.txt  main.cpp
sprint05/t03/app/src/: draugr.cpp  (+1 more)
sprint05/t04/app/: CMakeLists.txt  main.cpp
sprint05/t05/app/: CMakeLists.txt  main.cpp
sprint06/t00/app/: CMakeLists.txt  main.cpp
sprint06/t01/app/: CMakeLists.txt  main.cpp
sprint06/t02/app/: CMakeLists.txt  main.cpp
sprint07/t00/app/: CMakeLists.txt  main.cpp
sprint07/t01/app/: CMakeLists.txt  main.cpp
sprint08/t00/: CMakeLists.txt
sprint08/t00/app/: CMakeLists.txt  main.cpp
sprint08/t01/: CMakeLists.txt
sprint08/t01/app/: main.cpp
sprint08/t01/app/src/: classWithInitializerList.h
sprint08/t02/: CMakeLists.txt
sprint08/t02/app/: main.cpp
sprint08/t03/: CMakeLists.txt
sprint08/t03/app/: CMakeLists.txt  main.cpp
sprint08/t03/app/src/: Bind.h
(+40 files in other folders)
